fix bio overflow

--- a/src/components/ListaDePersonas/ListaDePersonas.scss
+++ b/src/components/ListaDePersonas/ListaDePersonas.scss
@@ -10,10 +10,7 @@
         overflow: hidden;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 5; /* start showing ellipsis when 3rd line is reached */
+        -webkit-line-clamp: 4; /* start showing ellipsis when 4rd line is reached */
         white-space: pre-wrap;
-        p {
-            padding: 0;
-        }
     }
 }
